--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "google-sheet-sync",
   "version": "1.0.0",
   "description": "",
-  "main": "build/index.js",
+  "main": "build/index",
   "type": "module",
 
   "scripts": {    
