--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
-  "include": ["src/**/*"],
+  "include": ["src"],
   "exclude": ["node_modules", ".vscode"],
   "compilerOptions": {    
     "target": "es2022", /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019' or 'ESNEXT'. */
     "module": "ES2022", /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
+    "declaration": true,
     "lib": [
       "es6",
       "DOM"
@@ -18,7 +19,7 @@
     "strictPropertyInitialization": false,  /* Enable strict checking of property initialization in classes. */
     "moduleResolution": "node",            /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
     "baseUrl": "./", /* Base directory to resolve non-absolute module names. */
-    "types": ["node"],                           /* Type declaration files to be included in compilation. */
+    "types": [],                           /* Type declaration files to be included in compilation. */
     "typeRoots": ["./src/types"],
     "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
     "esModuleInterop": true, /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
@@ -26,5 +27,4 @@
     "emitDecoratorMetadata": true, /* Enables experimental support for emitting type metadata for decorators. */    
     "resolveJsonModule": true /* Include modules imported with '.json' extension */
   },
-
 }
